--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.5",
+    "firebase": "^9.19.1",
+    "firebase-login": "^1.0.0",
+    "firebase-tools": "^11.26.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "react": "^18.2.0",
